--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 aiofiles==23.2.1
-async_pymongo 
 aiohttp==3.9.2
 apscheduler==3.6.3
 asyncio==3.4.3
@@ -47,6 +46,7 @@ telethon==1.34.0
 tgcrypto==1.2.5
 wikipedia==1.4.0
 # update modules extra
+
 gtts
 heroku3
 alphabet_detector
@@ -61,13 +61,13 @@ pyfiglet
 MukeshAPI
 git+https://github.com/Awesome-RJ/GoGoAnimeAPI.git
 unidecode
-openai==1.10.0
-numpy==1.26.3
+openai==1.14.3
+numpy==1.26.4
 pycountry
 blackpink 
 qrcode
-lexica-api==1.5.1
+lexica-api==1.5.7
 git+https://github.com/AsmSafone/SafoneAPI
-python-arq==6.0.5
-wget
 pydub
+pymongo==4.6.3
+async_pymongo
